<package format="3">
    <name>unitree_udp_sender</name>
    <version>0.0.0</version>
    <description>The unitree_legged_real package</description>
    <maintainer email="laikago@unitree.cc">unitree</maintainer>
    <license>TODO</license>
    <buildtool_depend>extension_ament_node</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>std_msgs</depend>
    <depend>unitree_legged_sdk</depend>
    <depend>ros2_unitree_legged_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>eigen</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>